syntax = "proto3";

package stream;

// A request to download a file from Gantry
message DownloadRequest {
    string actor = 1;    
}

// A request to upload a file to Gantry
message UploadRequest {
    string actor = 1;
    uint64 total_bytes = 2;
    uint64 chunk_size = 3;
    uint64 total_chunks = 4;
}

message TransferAck {
    bool success = 1;
    string actor = 2;
    uint64 total_bytes = 3;
    uint64 chunk_size = 4;
    uint64 total_chunks = 5;    
}

// Acknowledgement of a single chunk
message ChunkAck {
    bool success = 1;
    uint64 sequence_no = 2;
    uint64 bytes_sent = 3;
}

// A single chunk of a file
message FileChunk {
    uint64 sequence_no = 1;    
    string actor = 2;
    uint64 total_bytes = 3;
    uint64 chunk_size = 4;
    uint64 total_chunks = 5;
    bytes chunk_bytes = 6;    
}
